Style : correction responsive <main> version mobile (page accueil)

--- a/css/modal.css
+++ b/css/modal.css
@@ -554,11 +554,14 @@ footer {
     box-shadow: unset;
     max-height: unset;
     min-height: 93vh;
+    margin-top: -31px;
   }
   .hero-content {
     background: #fff;
     color: #000;
-    padding: 20px;
+    /* padding: 20px; */
+    min-width: unset;
+    padding: 0px;
   }
   .hero-content::after {
     content: unset;
@@ -567,21 +570,32 @@ footer {
     display: none;
   }
   .hero-headline {
-    font-size: 4.5rem;
+    font-size: 2.45rem;
     white-space: normal;
   }
   .hero-text {
     width: unset;
     font-size: 1.5rem;
+    font-size: 0.85rem;
+    margin-top: 22px;
+  }
+  .hero-img{
+    margin-left: unset;
   }
   .hero-img img {
     border-radius: 10px;
     margin-top: 40px;
+    object-position: unset;
   }
   .hero-section > .btn-signup {
     display: block;
-    margin: 32px auto 10px;
-    padding: 12px 35px;
+    margin: 27px auto 10px;
+    /*padding: 12px 35px; */
+    /* margin: 0 auto; */
+    border-radius: 7px;
+    font-size: 0.875rem;
+    padding: 6px 31px;
+    font-family: 'DM Sans';
   }
   .copyrights {
     margin-top: 50px;
